# python-aapclient

./: .cursorrules  .gitignore  GETTING_STARTED.md  LICENSE  README.md  README.rst  env.example  pyproject.toml  requirements.txt  setup.cfg  setup.py
aapclient/: __init__.py  shell.py
aapclient/common/: aapconfig.py  clientmanager.py  ping.py  resource_list.py  utils.py
aapclient/controller/: __init__.py  client.py
aapclient/controller/v2/: __init__.py  credential.py  host.py  inventory.py  job.py  job_template.py  project.py  workflow.py  workflow_job.py
aapclient/eda/: __init__.py  client.py
aapclient/galaxy/: __init__.py  client.py
aapclient/gateway/: __init__.py  client.py
aapclient/gateway/v1/: __init__.py  organization.py  team.py  user.py  whoami.py
