[metadata]
name = python-aapclient
summary = Ansible Automation Platform Command-line Client
description_file = README.md
author = Red Hat
author_email = automation-dev@redhat.com
home_page = https://github.com/ansible/python-aapclient
python_requires = >=3.10
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[files]
packages =
    aapclient

[entry_points]
console_scripts =
    aap = aapclient.shell:main
